security fix in package.json and enhanced sleep in CI.yml

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mocha-steps": "latest"
   },
   "devDependencies": {
+    "eslint": ">=4.18.2",
     "pre-commit": "^1.2.2",
     "xo": "^0.18.2"
   },
