--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mocha": "latest",
     "mocha-clean": "latest",
     "mocha-steps": "latest",
+    "dot-prop": ">=4.2.1",
     "snyk": "^1.323.1"
   },
   "xo": {
