--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": ">=7.28.0",
     "pre-commit": "^1.2.2",
     "xo": "~0.39.1",
+    "glob-parent": ">=5.1.2",
     "should": "latest",
     "mocha": "latest",
     "mocha-clean": "latest",
