--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha": "^10.7.3",
     "pre-commit": "^1.2.2",
     "should": "latest",
+    "braces": "^3.0.3",
     "xo": "~0.39.1"
   },
   "xo": {
